tab1-html commit

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -8,21 +8,19 @@
 
 <ion-content [fullscreen]="true">
 
-    <ion-toolbar>
+  
 
-      
       <ion-card *ngFor="let article of articles">
-        <ion-card-header>
            <ion-img [src] = "article.urlToImage"></ion-img>
+           <ion-card-header>
            <ion-card-subtitle>{{article.publishedAt|date}}</ion-card-subtitle>
            <ion-card-title>{{article.title}}</ion-card-title>
         </ion-card-header>
-        <ion-card-content>
-           {{article.description}}
-        </ioni-card-content>
-     </ion-card>
-    </ion-toolbar>
- 
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+        <ion-card-content>{{article.description}}</ion-card-content>
+     </ion-card>
+
+
+ 
 </ion-content>
+
