--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,6 +15,7 @@
            <ion-card-header>
            <ion-card-subtitle>{{article.publishedAt|date}}</ion-card-subtitle>
            <ion-card-title>{{article.title}}</ion-card-title>
+           <ion-label>Author: {{article.author}}</ion-label>
         </ion-card-header>
 
         <ion-card-content>{{article.description}}</ion-card-content>
