--- a/src/app/tab1/tab1.page.scss
+++ b/src/app/tab1/tab1.page.scss
@@ -8,3 +8,9 @@ ion-img
     margin-top: 0.3cm;
 width: 8cm;
 }
+ion-label
+{
+    text-align: center;
+    font-style:italic;
+    font-weight: bold;
+}
