--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,8 +2,8 @@
 
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="paper"></ion-icon>
-      <ion-label>News</ion-label>
+      <ion-icon ios="ios-paper" md="md-paper"></ion-icon>
+     
     </ion-tab-button>
 
     <!-- <ion-tab-button tab="tab2">
